samples/_failures_safe/1761161423_ceae1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa6eed93.c: In function ‘bfs’:
./samples/SAFE/__tmp_fa6eed93.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
